# ArcadiaChatbotPythonEdition

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
inputs/: Citas.txt  Streamers.txt
src/: Arcadia.py  Colores.py  TextParser.py  main.py
