[tool.poetry]
name = "ArcadiaChatBot"
version = "0.1.0"
description = "This is a Twitch Bot"
authors = ["IvanitiX"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
twitchio = "^2.0.6"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
